--- a/style.css
+++ b/style.css
@@ -49,3 +49,9 @@ body #bd{
 .brown{
     color: rgb(131, 131, 4);
 }
+.indigo{
+    color: rgb(162, 22, 181);
+}
+.violet{
+    color: rgb(41, 22, 41);
+}
