--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body #bd{
     width: 90%;
     text-align: center;
     padding: 1rem;
-    font-size: small;
+    font-size: large;
     margin-right: 5%;
     margin-left: 5%;
     margin-top: 5rem;
